--- a/src/main/webapp/res/zUIC/css/style.css
+++ b/src/main/webapp/res/zUIC/css/style.css
@@ -10,7 +10,7 @@ body{font-family:'微软雅黑'; margin:0 auto;min-width:980px;}
 ul{display:block;margin:0;padding:0;list-style:none;}
 li{display:block;margin:0;padding:0;list-style: none;}
 img{border:0;}
-dl,dt,dd,span{margin:0;padding:0;display:block;}
+dl,dt,dd{margin:0;padding:0;display:block;}
 a,a:focus{text-decoration:none;color:#000;outline:none;blr:expression(this.onFocus=this.blur());}
 a:hover{color:#00a4ac;text-decoration:none;}
 table{border-collapse:collapse;border-spacing: 0;}
@@ -131,6 +131,15 @@ h2{font-weight:normal;}
 .menuson li.active a{color:#fff;}
 .title{cursor:pointer;}
 
+/*leftTree*/
+.leftTreeDiv{
+    width:187px;
+    height: 100%;
+    overflow:scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    background:url(../images/leftline.gif) repeat-y right;
+}
 
 /*right.html*/
 .place{height:40px; background:url(../images/righttop.gif) repeat-x;}
