--- a/src/main/webapp/res/plugins/DataTables-1.10.7/css/jquery.dataTables.css
+++ b/src/main/webapp/res/plugins/DataTables-1.10.7/css/jquery.dataTables.css
@@ -7,6 +7,7 @@ table.dataTable {
   clear: both;
   border-collapse: separate;
   border-spacing: 0;
+
   /*
    * Header and footer styles
    */
@@ -14,18 +15,22 @@ table.dataTable {
    * Body styles
    */
 }
+
+.dtInfo{
+  background: #E5EDF2;
+  border: 1px solid #ddd;
+  height: 35px;
+}
 table.dataTable thead th,
 table.dataTable tfoot th {
   font-weight: bold;
-  background:#E4EFF1;
-  /*border-top:1px solid #8CB2E3;*/
-  border:1px solid #8CB2E3;
-  color: #5371ba;
+  background:#3eafe0;
+  color: #fff;
 }
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #3c95c8;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -83,9 +88,17 @@ table.dataTable.row-border tbody tr:first-child td, table.dataTable.display tbod
 table.dataTable.display tbody tr:first-child td {
   border-top: none;
 }
+table.dataTable.cell-border thead th, table.dataTable.cell-border thead td {
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
 table.dataTable.cell-border tbody th, table.dataTable.cell-border tbody td {
   border-top: 1px solid #ddd;
   border-right: 1px solid #ddd;
+}
+table.dataTable.cell-border thead tr th:first-child,
+table.dataTable.cell-border thead tr th:first-child{
+  border-left: 1px solid #ddd;
 }
 table.dataTable.cell-border tbody tr th:first-child,
 table.dataTable.cell-border tbody tr td:first-child {
@@ -96,13 +109,13 @@ table.dataTable.cell-border tbody tr:first-child td {
   border-top: none;
 }
 table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
-  background-color: #f9f9f9;
+  background-color: #E6F4F9;
 }
 table.dataTable.stripe tbody tr.odd.selected, table.dataTable.display tbody tr.odd.selected {
   background-color: #abb9d3;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
-  background-color: whitesmoke;
+  background-color: #A5E4EF;
 }
 table.dataTable.hover tbody tr:hover.selected, table.dataTable.display tbody tr:hover.selected {
   background-color: #a9b7d1;
@@ -293,9 +306,11 @@ table.dataTable td {
   margin-left: 0.5em;
 }
 .dataTables_wrapper .dataTables_info {
-  clear: both;
-  float: left;
+    /*clear: both;*/
+    /*float: left;*/
+  float:right;
   padding-top: 0.755em;
+  margin-right: 10px;
 }
 .dataTables_wrapper .dataTables_paginate {
   float: right;
@@ -341,35 +356,36 @@ table.dataTable td {
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
   color: white !important;
-  border: 1px solid #111;
-  background-color: #585858;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #585858), color-stop(100%, #111));
+  border: 1px solid #66c9f3;
+  border-radius: 10px;
+  background-color: #E6F4F9;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #E6F4F9), color-stop(100%, #aae5f4));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #585858 0%, #111 100%);
+  background: -webkit-linear-gradient(top, #E6F4F9 0%, #aae5f4 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -moz-linear-gradient(top, #585858 0%, #111 100%);
+  background: -moz-linear-gradient(top, #E6F4F9 0%, #aae5f4 100%);
   /* FF3.6+ */
-  background: -ms-linear-gradient(top, #585858 0%, #111 100%);
+  background: -ms-linear-gradient(top, #E6F4F9 0%, #aae5f4 100%);
   /* IE10+ */
-  background: -o-linear-gradient(top, #585858 0%, #111 100%);
+  background: -o-linear-gradient(top, #E6F4F9 0%, #aae5f4 100%);
   /* Opera 11.10+ */
-  background: linear-gradient(to bottom, #585858 0%, #111 100%);
+  background: linear-gradient(to bottom, #E6F4F9 0%, #aae5f4 100%);
   /* W3C */
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button:active {
   outline: none;
-  background-color: #2b2b2b;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2b2b2b), color-stop(100%, #0c0c0c));
+  background-color: #3993f3;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #aae5f4), color-stop(100%, #3993f3));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
+  background: -webkit-linear-gradient(top, #aae5f4 0%, #3993f3 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -moz-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
+  background: -moz-linear-gradient(top, #aae5f4 0%, #3993f3 100%);
   /* FF3.6+ */
-  background: -ms-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
+  background: -ms-linear-gradient(top, #aae5f4 0%, #3993f3 100%);
   /* IE10+ */
-  background: -o-linear-gradient(top, #2b2b2b 0%, #0c0c0c 100%);
+  background: -o-linear-gradient(top, #aae5f4 0%, #3993f3 100%);
   /* Opera 11.10+ */
-  background: linear-gradient(to bottom, #2b2b2b 0%, #0c0c0c 100%);
+  background: linear-gradient(to bottom, #aae5f4 0%, #3993f3 100%);
   /* W3C */
   box-shadow: inset 0 0 3px #111;
 }
@@ -423,7 +439,7 @@ table.dataTable td {
   padding: 0 !important;
 }
 .dataTables_wrapper.no-footer .dataTables_scrollBody {
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #ddd;
 }
 .dataTables_wrapper.no-footer div.dataTables_scrollHead table,
 .dataTables_wrapper.no-footer div.dataTables_scrollBody table {
