--- a/src/main/webapp/res/zUIC/css/style.css
+++ b/src/main/webapp/res/zUIC/css/style.css
@@ -227,7 +227,7 @@ h2{font-weight:normal;}
 
 
 /*form*/
-.formbody{padding:10px 18px;}
+.formbody{padding:5px 10px;}
 .formtitle{border-bottom:solid 1px #d0dee5; line-height:35px; position:relative; height:35px; margin-bottom:28px;}
 .formtitle span{font-weight:bold;font-size:14px; border-bottom:solid 3px #66c9f3;float:left; position:absolute; z-index:100; bottom:-1px; padding:0 3px; height:30px; line-height:30px;}
 .forminfo{padding-left:23px;}
@@ -238,6 +238,41 @@ h2{font-weight:normal;}
 .dfinput{width:345px; height:30px; line-height:30px; border-top:solid 1px #a7b5bc; border-left:solid 1px #a7b5bc; border-right:solid 1px #ced9df; border-bottom:solid 1px #ced9df; background:url(../images/inputbg.gif) repeat-x; text-indent:10px;}
 .textinput{border-top:solid 1px #a7b5bc; border-left:solid 1px #a7b5bc; border-right:solid 1px #ced9df; border-bottom:solid 1px #ced9df; background:url(../images/inputbg.gif) repeat-x; padding:10px; width:504px; height:135px; line-height:20px; overflow:hidden;}
 .btn{width:137px;height:35px; background:url(../images/btnbg.png) no-repeat; font-size:14px;font-weight:bold;color:#fff; cursor:pointer;}
+
+/*bootstrap form*/
+.form-horizontal .form-group{
+    margin:10px 10px 15px 10px;
+    width: 400px;
+}
+.form-horizontal .form-group .control-label
+{
+    padding-right: 10px;
+    text-align: right;
+    width: 86px;
+    line-height: 30px;
+    display: block;
+    float: left;
+    font-size: 12px;
+}
+.form-control
+{
+    display: block;
+    width: 250px;
+    height: 15px;
+    padding: 6px 12px;
+    font-size: 12px;
+    line-height: 15px;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
 
 
 /*tip*/
